--- a/scss/index.css
+++ b/scss/index.css
@@ -26,7 +26,7 @@ body {
   -webkit-transition: all ease 0.3s;
   transition: all ease 0.3s;
   color: #434343;
-  background-color: #eeeeee;
+  background-color: #fff !important;
 }
 
 /*--------------------------------------------------------------
@@ -34,7 +34,7 @@ body {
 --------------------------------------------------------------*/
 .section-title {
   text-align: center;
-  padding-bottom: 30px;
+  padding-bottom: 20px;
 }
 
 .section-title h2 {
@@ -44,7 +44,7 @@ body {
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
-  color: #37517e;
+  color: #3587c8;
 }
 
 .section-title h2::before {
@@ -74,6 +74,60 @@ body {
   color: #ffcd3f;
 }
 
+/*--------------------------------------------------------------
+# Breadcrumbs
+--------------------------------------------------------------*/
+.breadcrumbs {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(53, 135, 200, 0.8)), to(rgba(53, 135, 200, 0.8))), url("https://png.pngtree.com/thumb_back/fw800/back_our/20190621/ourmid/pngtree-world-cup-blue-gradient-flat-football-banner-image_194909.jpg") fixed center center;
+  background: linear-gradient(rgba(53, 135, 200, 0.8), rgba(53, 135, 200, 0.8)), url("https://png.pngtree.com/thumb_back/fw800/back_our/20190621/ourmid/pngtree-world-cup-blue-gradient-flat-football-banner-image_194909.jpg") fixed center center;
+  background-size: cover;
+  padding: 80px 0;
+  color: white;
+  /* padding: 15px 0;
+background: #f3f5fa;
+min-height: 40px;
+margin-top: 72px; */
+}
+
+.breadcrumbs h2 {
+  font-size: 28px;
+  font-weight: 600;
+  color: white !important;
+}
+
+@media (max-width: 992px) {
+  .breadcrumbs .breadcrumbs {
+    margin-top: 68px;
+  }
+}
+
+.breadcrumbs ol {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  list-style: none;
+  padding: 0 0 10px 0;
+  margin: 0;
+  font-size: 14px;
+}
+
+.breadcrumbs ol li + li {
+  padding-left: 10px;
+}
+
+.breadcrumbs ol li + li::before {
+  display: inline-block;
+  padding-right: 10px;
+  color: #4668a2;
+  content: "/";
+}
+
+#header {
+  border-bottom: 1px solid #e9eced;
+}
+
 #header .navbar-brand img {
   -webkit-transition: all ease 0.3s;
   transition: all ease 0.3s;
@@ -84,8 +138,22 @@ body {
           transform: scale(1.1);
 }
 
+#header ul {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 #header ul li {
   margin-left: 30px;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+  border-bottom: 2px solid transparent;
+}
+
+#header ul li:hover {
+  border-bottom: 2px solid #e9eced;
 }
 
 #header ul li .active {
@@ -96,43 +164,8 @@ body {
   color: #434343;
   font-size: 1rem;
   padding: 15px;
-  font-weight: bold;
+  font-weight: 500;
   line-height: 1.15;
-  position: relative;
-}
-
-#header ul li a::before, #header ul li a::after {
-  content: "";
-  width: 100%;
-  height: 2px;
-  background-color: #3587c8;
-  position: absolute;
-  left: 0;
-  -webkit-transform: scaleX(0);
-          transform: scaleX(0);
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-#header ul li a::after {
-  bottom: 0%;
-  -webkit-transform-origin: right;
-          transform-origin: right;
-}
-
-#header ul li a::before {
-  top: 0;
-  -webkit-transform-origin: left;
-          transform-origin: left;
-}
-
-#header ul li a:hover {
-  color: #3587c8;
-}
-
-#header ul li a:hover:after, #header ul li a:hover::before {
-  -webkit-transform: scaleX(1);
-          transform: scaleX(1);
 }
 
 #hero {
@@ -143,8 +176,8 @@ body {
 }
 
 #hero #hero-section {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(4, 9, 30, 0.5)), to(rgba(4, 9, 30, 0.5))), url(/img/hero-img.jpg) repeat fixed 100%;
-  background: linear-gradient(rgba(4, 9, 30, 0.5), rgba(4, 9, 30, 0.5)), url(/img/hero-img.jpg) repeat fixed 100%;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(4, 9, 30, 0.5)), to(rgba(4, 9, 30, 0.5))), url(../img/hero-img.jpg) repeat fixed 100%;
+  background: linear-gradient(rgba(4, 9, 30, 0.5), rgba(4, 9, 30, 0.5)), url(../img/hero-img.jpg) repeat fixed 100%;
   background-size: cover;
   height: 88vh;
 }
@@ -474,6 +507,7 @@ body {
 
 #why-us {
   margin: 80px 0px;
+  background-color: #fafafa !important;
 }
 
 #why-us .why-content .title-why {
@@ -503,10 +537,13 @@ body {
   margin: 80px 0px;
 }
 
+#program a {
+  text-decoration: none;
+}
+
 #program .card {
-  border-radius: 10px;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-          box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  border-radius: 3px;
+  border: 1px solid #e9eced;
 }
 
 #program .card img {
@@ -547,23 +584,19 @@ body {
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
-#contact {
-  margin: 80px 0;
-}
-
 .contact .info {
-  border-top: 3px solid #3587c8;
-  border-bottom: 3px solid #3587c8;
+  border-top: 3px solid #47b2e4;
+  border-bottom: 3px solid #47b2e4;
   padding: 30px;
   background: #fff;
   width: 100%;
-  -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
-          box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.1);
 }
 
 .contact .info i {
   font-size: 20px;
-  color: #3587c8;
+  color: #47b2e4;
   float: left;
   width: 44px;
   height: 44px;
@@ -587,14 +620,14 @@ body {
   font-size: 22px;
   font-weight: 600;
   margin-bottom: 5px;
-  color: #3587c8;
+  color: #37517e;
 }
 
 .contact .info p {
   padding: 0 0 10px 60px;
   margin-bottom: 20px;
   font-size: 14px;
-  color: #3587c8;
+  color: #6182ba;
 }
 
 .contact .info .email p {
@@ -629,14 +662,14 @@ body {
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: #3587c8;
+  background: #47b2e4;
   color: #fff;
 }
 
 .contact .php-email-form {
   width: 100%;
-  border-top: 3px solid #3587c8;
-  border-bottom: 3px solid #3587c8;
+  border-top: 3px solid #47b2e4;
+  border-bottom: 3px solid #47b2e4;
   padding: 30px;
   background: #fff;
   -webkit-box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
@@ -716,7 +749,7 @@ body {
 
 .contact .php-email-form input:focus,
 .contact .php-email-form textarea:focus {
-  border-color: #3587c8;
+  border-color: #47b2e4;
 }
 
 .contact .php-email-form input {
@@ -728,7 +761,7 @@ body {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #3587c8;
+  background: #47b2e4;
   border: 0;
   padding: 12px 34px;
   color: #fff;
@@ -738,7 +771,7 @@ body {
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-  background: #3587c8;
+  background: #209dd8;
 }
 
 @-webkit-keyframes animate-loading {
@@ -764,8 +797,9 @@ body {
 }
 
 footer {
-  background: #003c3c;
+  background: #fffafa;
   padding: 40px 0px;
+  margin-top: 80px;
 }
 
 footer .social-wrap {
@@ -861,7 +895,7 @@ footer .social-wrap .social-links a .fab {
 }
 
 footer p {
-  color: white;
+  color: #3587c8;
   font-size: 14px;
   text-align: start;
 }
@@ -885,7 +919,7 @@ footer .quick-links ul li {
 
 footer .quick-links ul li a {
   text-decoration: none;
-  color: white;
+  color: #3587c8;
   font-size: 14px;
 }
 
@@ -899,5 +933,149 @@ footer .quick-links ul li a {
   footer .social-links {
     width: 100%;
   }
+}
+
+.clinicsDetails .clinics-content {
+  margin-top: 70px;
+}
+
+.clinicsDetails h4 {
+  text-transform: uppercase;
+  color: #3587c8;
+}
+
+.clinicsDetails p {
+  text-align: start;
+}
+
+.miniAlliess .miniAllies-content {
+  margin-top: 70px;
+}
+
+.miniAlliess .miniAllies-content .btnn {
+  padding: 15px 20px;
+  font-weight: 600;
+  font-size: 18px;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: #3587c8;
+  border-color: #3587c8;
+  text-decoration: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  text-align: center;
+}
+
+.miniAlliess .miniAllies-content .content .content-down ul {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  list-style: none;
+  text-align: start !important;
+}
+
+.miniAlliess .miniAllies-content .content .content-down ul li a {
+  text-decoration: none;
+}
+
+.miniAlliess .miniAllies-content .content .content-down ul li a span {
+  color: #3587c8;
+  font-weight: 700;
+}
+
+.miniAlliess .miniAllies-content p {
+  text-align: start;
+}
+
+.miniAlliess .miniAllies-content p span {
+  font-style: italic;
+  color: #ffcd3f;
+}
+
+.miniAlliess .banner-inner {
+  margin: 80px 0;
+}
+
+.miniAlliess .banner-inner p {
+  text-align: center;
+  position: relative;
+  font-weight: 400;
+  font-size: 24px;
+  color: #000;
+}
+
+.miniAlliess .banner-inner p::before {
+  content: "";
+  position: absolute;
+  left: 0px;
+  top: 0;
+  height: 100%;
+  background-color: #434343;
+  width: 5px;
+}
+
+.miniAlliess h6 {
+  color: #3587c8;
+  font-weight: 600;
+  font-size: 1rem;
+}
+
+.miniAlliess span {
+  color: #3587c8;
+  font-weight: 600;
+  font-style: italic;
+}
+
+.misson {
+  margin: 80px 0;
+  background-color: #fffafa;
+  padding: 20px;
+}
+
+.misson ul {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  list-style: none;
+  text-align: start !important;
+}
+
+.misson ul li a {
+  text-decoration: none;
+}
+
+.misson ul li a span {
+  color: #ffcd3f;
+  font-weight: 700;
+  border-bottom: 1px solid #3587c8;
+}
+
+.misson .text-center {
+  font-size: 18px;
+}
+
+.misson h5 {
+  font-size: 1rem;
+  text-transform: uppercase;
+  color: #3587c8;
+}
+
+.misson p {
+  font-size: 14px;
+}
+
+.misson p span {
+  color: #3587c8;
+  font-style: italic;
+  font-weight: 600;
 }
 /*# sourceMappingURL=index.css.map */
