--- a/scss/index.scss
+++ b/scss/index.scss
@@ -16,6 +16,9 @@
 $CM: #3587c8;
 $CB: #434343;
 $SC: #ffcd3f;
+$BC: #e9eced;
+
+$SB: #fffafa;
 
 //MarPad
 @mixin MarPad {
@@ -38,14 +41,14 @@ body {
   overflow-x: hidden;
   transition: all ease 0.3s;
   color: $CB;
-  background-color: #eeeeee;
+  background-color: #fff !important;
 }
 /*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
 .section-title {
   text-align: center;
-  padding-bottom: 30px;
+  padding-bottom: 20px;
   h2 {
     font-size: 32px;
     font-weight: bold;
@@ -53,7 +56,7 @@ body {
     margin-bottom: 20px;
     padding-bottom: 20px;
     position: relative;
-    color: #37517e;
+    color: $CM;
     &::before {
       content: "";
       position: absolute;
@@ -81,8 +84,55 @@ body {
   }
 }
 
+/*--------------------------------------------------------------
+# Breadcrumbs
+--------------------------------------------------------------*/
+.breadcrumbs {
+  background: linear-gradient(rgba(53, 135, 200, 0.8), rgba(53, 135, 200, 0.8)),
+    url("https://png.pngtree.com/thumb_back/fw800/back_our/20190621/ourmid/pngtree-world-cup-blue-gradient-flat-football-banner-image_194909.jpg")
+      fixed center center;
+  background-size: cover;
+  padding: 80px 0;
+  color: white;
+  /* padding: 15px 0;
+background: #f3f5fa;
+min-height: 40px;
+margin-top: 72px; */
+  h2 {
+    font-size: 28px;
+    font-weight: 600;
+    color: white !important;
+  }
+
+  @media (max-width: 992px) {
+    .breadcrumbs {
+      margin-top: 68px;
+    }
+  }
+  ol {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0 0 10px 0;
+    margin: 0;
+    font-size: 14px;
+  }
+
+  ol li + li {
+    padding-left: 10px;
+  }
+
+  ol li + li::before {
+    display: inline-block;
+    padding-right: 10px;
+    color: #4668a2;
+    content: "/";
+  }
+}
+
 //Navbar
 #header {
+  border-bottom: 1px solid $BC;
   .navbar-brand {
     img {
       transition: all ease 0.3s;
@@ -92,8 +142,14 @@ body {
     }
   }
   ul {
+    @include MarPad();
     li {
       margin-left: 30px;
+      transition: 0.3s ease-in-out;
+      border-bottom: 2px solid transparent;
+      &:hover {
+        border-bottom: 2px solid $BC;
+      }
       .active {
         color: $CM !important;
       }
@@ -101,36 +157,8 @@ body {
         color: $CB;
         font-size: 1rem;
         padding: 15px;
-        font-weight: bold;
+        font-weight: 500;
         line-height: 1.15;
-        position: relative;
-
-        &::before,
-        &::after {
-          content: "";
-          width: 100%;
-          height: 2px;
-          background-color: $CM;
-          position: absolute;
-          left: 0;
-          transform: scaleX(0);
-          transition: 0.3s;
-        }
-        &::after {
-          bottom: 0%;
-          transform-origin: right;
-        }
-        &::before {
-          top: 0;
-          transform-origin: left;
-        }
-        &:hover {
-          color: $CM;
-          &:after,
-          &::before {
-            transform: scaleX(1);
-          }
-        }
       }
     }
   }
@@ -429,6 +457,7 @@ body {
 //why-us
 #why-us {
   margin: 80px 0px;
+  background-color: #fafafa !important;
   .why-content {
     .title-why {
       font-size: 32px;
@@ -455,11 +484,13 @@ body {
 
 //program
 #program {
+  a {
+    text-decoration: none;
+  }
   margin: 80px 0px;
   .card {
-    border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
-      rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    border-radius: 3px;
+    border: 1px solid $BC;
     img {
       width: 100%;
       height: 300px;
@@ -492,82 +523,83 @@ body {
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
-
-#contact {
-  margin: 80px 0;
-}
 .contact .info {
-  border-top: 3px solid $CM;
-  border-bottom: 3px solid $CM;
+  border-top: 3px solid #47b2e4;
+  border-bottom: 3px solid #47b2e4;
   padding: 30px;
   background: #fff;
   width: 100%;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
-  i {
-    font-size: 20px;
-    color: $CM;
-    float: left;
-    width: 44px;
-    height: 44px;
-    background: #e7f5fb;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50px;
-    transition: all 0.3s ease-in-out;
-  }
-  h4 {
-    padding: 0 0 0 60px;
-    font-size: 22px;
-    font-weight: 600;
-    margin-bottom: 5px;
-    color: $CM;
-  }
-  p {
-    padding: 0 0 10px 60px;
-    margin-bottom: 20px;
-    font-size: 14px;
-    color: $CM;
-  }
-  .email {
-    p {
-      padding-top: 5px;
-    }
-  }
-  .social-links {
-    padding-left: 60px;
-    a {
-      font-size: 18px;
-      display: inline-block;
-      background: #333;
-      color: #fff;
-      line-height: 1;
-      padding: 8px 0;
-      border-radius: 50%;
-      text-align: center;
-      width: 36px;
-      height: 36px;
-      transition: 0.3s;
-      margin-right: 10px;
-      &:hover {
-        background: #47b2e4;
-        color: #fff;
-      }
-    }
-  }
+  box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.1);
+}
+
+.contact .info i {
+  font-size: 20px;
+  color: #47b2e4;
+  float: left;
+  width: 44px;
+  height: 44px;
+  background: #e7f5fb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  transition: all 0.3s ease-in-out;
+}
+
+.contact .info h4 {
+  padding: 0 0 0 60px;
+  font-size: 22px;
+  font-weight: 600;
+  margin-bottom: 5px;
+  color: #37517e;
+}
+
+.contact .info p {
+  padding: 0 0 10px 60px;
+  margin-bottom: 20px;
+  font-size: 14px;
+  color: #6182ba;
+}
+
+.contact .info .email p {
+  padding-top: 5px;
+}
+
+.contact .info .social-links {
+  padding-left: 60px;
+}
+
+.contact .info .social-links a {
+  font-size: 18px;
+  display: inline-block;
+  background: #333;
+  color: #fff;
+  line-height: 1;
+  padding: 8px 0;
+  border-radius: 50%;
+  text-align: center;
+  width: 36px;
+  height: 36px;
+  transition: 0.3s;
+  margin-right: 10px;
+}
+
+.contact .info .social-links a:hover {
+  background: #47b2e4;
+  color: #fff;
 }
 
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: $CM;
+  background: #47b2e4;
   color: #fff;
 }
 
 .contact .php-email-form {
   width: 100%;
-  border-top: 3px solid $CM;
-  border-bottom: 3px solid $CM;
+  border-top: 3px solid #47b2e4;
+  border-bottom: 3px solid #47b2e4;
   padding: 30px;
   background: #fff;
   box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
@@ -645,7 +677,7 @@ body {
 
 .contact .php-email-form input:focus,
 .contact .php-email-form textarea:focus {
-  border-color: $CM;
+  border-color: #47b2e4;
 }
 
 .contact .php-email-form input {
@@ -657,7 +689,7 @@ body {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: $CM;
+  background: #47b2e4;
   border: 0;
   padding: 12px 34px;
   color: #fff;
@@ -666,7 +698,7 @@ body {
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-  background: $CM;
+  background: #209dd8;
 }
 
 @-webkit-keyframes animate-loading {
@@ -686,10 +718,12 @@ body {
     transform: rotate(360deg);
   }
 }
+
 //footer
 footer {
-  background: #003c3c;
+  background: $SB;
   padding: 40px 0px;
+  margin-top: 80px;
   .social-wrap {
     width: 100%;
     display: flex;
@@ -753,7 +787,7 @@ footer {
     }
   }
   p {
-    color: white;
+    color: $CM;
     font-size: 14px;
     text-align: start;
   }
@@ -769,7 +803,7 @@ footer {
         margin-top: 10px;
         a {
           text-decoration: none;
-          color: white;
+          color: $CM;
           font-size: 14px;
         }
       }
@@ -783,6 +817,133 @@ footer {
   @media (max-width: 480px) {
     .social-links {
       width: 100%;
+    }
+  }
+}
+
+//clinicsDetails
+.clinicsDetails {
+  .clinics-content {
+    margin-top: 70px;
+  }
+  h4 {
+    text-transform: uppercase;
+    color: $CM;
+  }
+  p {
+    text-align: start;
+  }
+}
+
+//miniAllies
+.miniAlliess {
+  .miniAllies-content {
+    margin-top: 70px;
+    .btnn {
+      padding: 15px 20px;
+      font-weight: 600;
+      font-size: 18px;
+      font-weight: 500;
+      text-transform: uppercase;
+      color: #fff;
+      background-color: $CM;
+      border-color: $CM;
+      text-decoration: none;
+      display: flex;
+      justify-content: start;
+      flex-wrap: wrap;
+      text-align: center;
+    }
+    .content {
+      .content-down {
+        ul {
+          @include MarPad();
+          list-style: none;
+          text-align: start !important;
+          li {
+            a {
+              text-decoration: none;
+              span {
+                color: $CM;
+                font-weight: 700;
+               
+              }
+            }
+          }
+        }
+      }
+    }
+    p {
+      text-align: start;
+      span {
+        font-style: italic;
+        color: $SC;
+      }
+    }
+  }
+  .banner-inner {
+    margin: 80px 0;
+    p {
+      text-align: center;
+      position: relative;
+      font-weight: 400;
+      font-size: 24px;
+      color:#000;
+      &::before {
+        content: "";
+        position: absolute;
+        left: 0px;
+        top: 0;
+        height: 100%;
+        background-color: $CB;
+        width: 5px;
+      }
+    }
+  }
+  h6 {
+    color: $CM;
+    font-weight: 600;
+    font-size: 1rem;
+  }
+  span {
+    color: $CM;
+    font-weight: 600;
+    font-style: italic;
+  }
+}
+.misson {
+  margin: 80px 0;
+  background-color: $SB;
+  padding: 20px;
+  ul {
+    @include MarPad();
+    list-style: none;
+    text-align: start !important;
+    li {
+      a {
+        text-decoration: none;
+        span {
+          color: $SC;
+          font-weight: 700;
+          border-bottom: 1px solid $CM;
+        }
+      }
+    }
+  }
+  .text-center {
+    font-size: 18px;
+  }
+  h5 {
+    font-size: 1rem;
+    text-transform: uppercase;
+    color: $CM;
+  }
+  p {
+    font-size: 14px;
+    span {
+      color: $CM;
+      font-style: italic;
+      font-weight: 600;
     }
   }
 }
