--- a/scss/index.css
+++ b/scss/index.css
@@ -168,228 +168,133 @@ margin-top: 72px; */
   line-height: 1.15;
 }
 
-#hero {
-  margin-bottom: 80px;
-  /* Heading Text */
-  /* Icon Box */
-  /* Icon Box */
-}
-
-#hero #hero-section {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(4, 9, 30, 0.5)), to(rgba(4, 9, 30, 0.5))), url(../img/hero-img.jpg) repeat fixed 100%;
-  background: linear-gradient(rgba(4, 9, 30, 0.5), rgba(4, 9, 30, 0.5)), url(../img/hero-img.jpg) repeat fixed 100%;
-  background-size: cover;
-  height: 88vh;
-}
-
-#hero #hero-section .hero-content {
-  text-align: center;
-}
-
-#hero #hero-section .hero-content h1 {
-  margin-top: 140px;
-  font-size: 38px;
-  line-height: 1.1;
-  position: relative;
-  font-weight: 700;
-  margin-bottom: 20px;
-  color: #fff;
-  text-transform: uppercase;
-}
-
-#hero #hero-section .hero-content h1 span {
-  color: #ffcd3f;
-  font-style: italic;
-}
-
-#hero #hero-section .hero-content a {
-  margin: 0 auto;
-  width: 18%;
-  border-radius: 0px 20px;
-  font-size: 16px;
-  letter-spacing: 1px;
-  font-weight: 700;
-  text-align: center;
-  text-transform: uppercase;
-  padding: 22px 30px;
-  color: #fff;
-  background-color: #3587c8;
-  text-decoration: none;
-}
-
-@media screen and (max-width: 997px) {
-  #hero #hero-section .hero-content h1 {
-    margin-top: 200px;
-  }
-  #hero #hero-section .hero-content a {
-    width: 80%;
-  }
-}
-
-@media screen and (max-width: 372px) {
-  #hero #hero-section {
-    margin-top: 60px;
-    height: auto;
-    padding: 20px;
-  }
-}
-
-#hero .block {
-  width: 300px;
-  height: 300px;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-          box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-  position: relative;
-  overflow: hidden;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border: 0px solid #fff;
-  -webkit-transition: all 500ms linear;
-  transition: all 500ms linear;
-  /* Heading Text */
-}
-
-#hero .block:hover .bg {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
-}
-
-#hero .block .bg {
+.hero-main {
   width: 100%;
   height: 100%;
-  background-position: center;
-  background-size: cover;
-  -webkit-transition: all 400ms ease;
-  transition: all 400ms ease;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(4, 9, 30, 0.5)), to(rgba(4, 9, 30, 0.5)));
-  background: linear-gradient(rgba(4, 9, 30, 0.5), rgba(4, 9, 30, 0.5));
-  opacity: 0.9;
 }
 
-#hero .block .head {
+.hero-main .hero-left {
+  padding: 20px 0 0 20px;
+}
+
+.hero-main .hero-left h4 {
+  letter-spacing: 0.05em;
+  color: #3587c8;
+  font-weight: 600;
+  position: relative;
+}
+
+.hero-main .hero-left h4::before {
+  content: '';
   position: absolute;
+  bottom: -14px;
+  left: 0%;
   width: 100%;
-  height: 100%;
-  text-align: center;
-  letter-spacing: 2px;
-  z-index: 20;
+  height: 2px;
+  background-color: #3587c8;
 }
 
-#hero .block .head h2 {
-  padding-top: 50px;
-  text-shadow: 0 0 1px #111;
-  letter-spacing: 3px;
-  text-transform: uppercase;
-  -webkit-transform-origin: left center;
-          transform-origin: left center;
-  -webkit-transform: none;
-          transform: none;
-  -webkit-transition: all 300ms ease-out;
-  transition: all 300ms ease-out;
+.hero-main .hero-left .clinics-list {
+  margin: 20px;
 }
 
-#hero .block .head h2 span {
-  font-weight: bold;
-  font-style: italic;
-  color: #ffcd3f;
-  font-size: 33px;
+.hero-main .hero-left .clinics-list ul {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  list-style: none;
 }
 
-#hero .block:hover h2 {
-  color: #fff;
-  -webkit-transform: rotate(90deg) translateY(-60px) translateX(-35px);
-          transform: rotate(90deg) translateY(-60px) translateX(-35px);
+.hero-main .hero-left .clinics-list ul li {
+  font-size: 12px;
+  border-bottom: 1px solid #e9eced;
 }
 
-#hero .iconBox {
-  position: absolute;
-  right: 0;
-  top: 0;
-  height: 100%;
-  width: 0px;
-  background-color: #434343;
-  z-index: 1000;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-transform: translateX(60px);
-          transform: translateX(60px);
-  -webkit-transition: all 300ms ease;
-  transition: all 300ms ease;
-  opacity: 0.9;
+.hero-main .hero-left .clinics-list ul li .left-list strong {
+  font-size: 1rem !important;
+  color: #3587c8;
+  font-weight: 600;
 }
 
-#hero .iconBox p {
-  color: white;
-  z-index: 1;
-  padding: 20px;
+.hero-main .hero-left .clinics-list ul li .left-list .date {
+  background-color: #fffafa;
+  padding: 5px 15px;
 }
 
-#hero .block:hover .iconBox {
-  width: 80%;
-  -webkit-transform: translateX(0px);
-          transform: translateX(0px);
-}
-
-@media (max-width: 768px) {
-  #hero .block {
-    margin-top: 20px;
-    width: 100%;
-  }
-}
-
-@media (max-width: 1000px) {
-  #hero .block {
-    width: 100%;
-    padding: 0%;
-  }
-}
-
-#Clinics-wrapper {
-  margin: 80px 0px;
-}
-
-#Clinics-wrapper .left-content {
-  text-align: center;
-}
-
-#Clinics-wrapper .left-content a {
-  font-size: 33px;
-  text-decoration: none;
-  font-weight: bold;
+.hero-main .hero-left .clinics-list ul li .right-list button {
+  border: none;
   background-color: #3587c8;
   color: white;
-  padding: 10px 20px;
-  border-radius: 4px;
+  padding: 8px 15px;
+  border: 3px;
 }
 
-#Clinics-wrapper .left-content a span {
-  color: #ffcd3f;
+.hero-main .hero-right img {
+  width: 100%;
+  height: 100%;
+}
+
+.hero-main .hero-right .progressbar {
+  counter-reset: step;
+}
+
+.hero-main .hero-right .progressbar li {
+  list-style: none;
+  display: inline-block;
+  width: 30.33%;
+  position: relative;
+  text-align: center;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 500;
   font-style: italic;
 }
 
-#Clinics-wrapper .left-content p {
-  font-size: 24px;
-  margin-top: 20px;
+.hero-main .hero-right .progressbar li::before {
+  content: counter(step);
+  counter-increment: step;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  border: none;
+  border-radius: 100%;
+  display: block;
+  text-align: center;
+  margin: 0 auto 10px auto;
+  background-color: #3587c8;
+  color: white;
 }
 
-#Clinics-wrapper .carousel-control-next-icon,
-#Clinics-wrapper .carousel-control-prev-icon {
-  background-color: #434343;
-  border-radius: 4px;
+.hero-main .hero-right .progressbar li::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #3587c8;
+  top: 15px;
+  left: -50%;
+  z-index: -1;
+}
+
+.hero-main .hero-right .progressbar li:first-child:after {
+  content: none;
+}
+
+.hero-main .hero-right .progressbar li.active {
+  color: #3587c8;
+}
+
+.hero-main .hero-right .progressbar li.active:before {
+  border-color: #3587c8;
+}
+
+.hero-main .hero-right .progressbar li.active + li:after {
+  background-color: #3587c8;
+}
+
+.testimonial-main {
+  margin: 80px 0;
 }
 
 .testimonial-main .testimonial {
@@ -584,6 +489,10 @@ margin-top: 72px; */
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
+.contact {
+  margin-top: 80px;
+}
+
 .contact .info {
   border-top: 3px solid #47b2e4;
   border-bottom: 3px solid #47b2e4;
@@ -861,12 +770,12 @@ footer .social-wrap .social-links a {
 
 footer .social-wrap .social-links a::after {
   content: "";
-  width: 100%;
-  height: 100%;
-  top: -90px;
-  left: 0;
+  width: 110%;
+  height: 110%;
+  top: -80px;
+  left: -0px;
   background: #000;
-  background: linear-gradient(-45deg, #ffcd3f, #3587c8);
+  background: linear-gradient(-45deg, #3587c8, #000);
   position: absolute;
   -webkit-transition: 0.5s;
   transition: 0.5s;
@@ -941,6 +850,7 @@ footer .quick-links ul li a {
 
 .clinicsDetails h4 {
   text-transform: uppercase;
+  padding: 20px 0 0 0;
   color: #3587c8;
 }
 
@@ -1077,5 +987,19 @@ footer .quick-links ul li a {
   color: #3587c8;
   font-style: italic;
   font-weight: 600;
+}
+
+.champDetails .champ-content {
+  margin: 70px 0;
+}
+
+.champDetails h4 {
+  text-transform: uppercase;
+  padding: 20px 0 0 0;
+  color: #3587c8;
+}
+
+.champDetails p {
+  text-align: start;
 }
 /*# sourceMappingURL=index.css.map */
