--- a/scss/index.scss
+++ b/scss/index.scss
@@ -164,199 +164,122 @@ margin-top: 72px; */
   }
 }
 
-//Hero
-#hero {
-  margin-bottom: 80px;
-  #hero-section {
-    background: linear-gradient(rgba(4, 9, 30, 0.5), rgba(4, 9, 30, 0.5)),
-      url(../img/hero-img.jpg) repeat fixed 100%;
-    background-size: cover;
-    height: 88vh;
-    .hero-content {
-      text-align: center;
-      h1 {
-        margin-top: 140px;
-        font-size: 38px;
-        line-height: 1.1;
-        position: relative;
-        font-weight: 700;
-        margin-bottom: 20px;
-        color: #fff;
-        text-transform: uppercase;
-        span {
-          color: $SC;
-          font-style: italic;
-        }
-      }
-      a {
-        margin: 0 auto;
-        width: 18%;
-        border-radius: 0px 20px;
-        font-size: 16px;
-        letter-spacing: 1px;
-        font-weight: 700;
-        text-align: center;
-        text-transform: uppercase;
-        padding: 22px 30px;
-        color: #fff;
+//hero-main
+.hero-main {
+  width: 100%;
+  height: 100%;
+  .hero-left {
+    padding: 20px 0 0 20px;
+    h4 {
+      letter-spacing: 0.05em;
+      color: $CM;
+      font-weight: 600;
+      position: relative;
+      &::before{
+        content: '';
+        position: absolute;
+        bottom: -14px;
+        left: 0%;
+        width: 100%;
+        height: 2px;
         background-color: $CM;
-        text-decoration: none;
+
       }
     }
-    @media screen and (max-width: 997px) {
-      .hero-content {
-        h1 {
-          margin-top: 200px;
-        }
-        a {
-          width: 80%;
+    .clinics-list {
+      margin: 20px;
+      ul {
+        @include MarPad();
+        list-style: none;
+        li {
+          font-size: 12px;
+          border-bottom: 1px solid $BC;
+          .left-list {
+            strong {
+              font-size: 1rem !important;
+              color: $CM;
+              font-weight: 600;
+            }
+            .date{
+             background-color: $SB;
+             padding: 5px 15px;
+            }
+          }
+          .right-list{
+            button{
+              border: none;
+              background-color: $CM;
+              color: white;
+              padding: 8px 15px;
+              border: 3px;
+            }
+          }
         }
       }
-    }
-    @media screen and (max-width: 372px) {
-      margin-top: 60px;
-      height: auto;
-      padding: 20px;
     }
   }
-
-  .block {
-    width: 300px;
-    height: 300px;
-    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
-      rgba(0, 0, 0, 0.23) 0px 6px 6px;
-    position: relative;
-    overflow: hidden;
-    justify-content: center;
-    align-items: center;
-    border: 0px solid #fff;
-    transition: all 500ms linear;
-    &:hover {
-      .bg {
-        transform: scale(1.2);
-      }
-    }
-    .bg {
+  .hero-right {
+    img {
       width: 100%;
       height: 100%;
-      background-position: center;
-      background-size: cover;
-      transition: all 400ms ease;
-      background: linear-gradient(rgba(4, 9, 30, 0.5), rgba(4, 9, 30, 0.5));
-      opacity: 0.9;
     }
-    /* Heading Text */
-    .head {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      text-align: center;
-      letter-spacing: 2px;
-      z-index: 20;
-
-      h2 {
-        padding-top: 50px;
-        text-shadow: 0 0 1px #111;
-        letter-spacing: 3px;
-        text-transform: uppercase;
-        transform-origin: left center;
-        transform: none;
-        transition: all 300ms ease-out;
-        span {
-          font-weight: bold;
-          font-style: italic;
-          color: $SC;
-          font-size: 33px;
-        }
-      }
-    }
-  }
-
-  .block:hover h2 {
-    color: #fff;
-    transform: rotate(90deg) translateY(-60px) translateX(-35px);
-  }
-  /* Heading Text */
-
-  /* Icon Box */
-  .iconBox {
-    position: absolute;
-    right: 0;
-    top: 0;
-    height: 100%;
-    width: 0px;
-    background-color: $CB;
-    z-index: 1000;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    transform: translateX(60px);
-    transition: all 300ms ease;
-    opacity: 0.9;
-
-    p {
-      color: white;
-      z-index: 1;
-      padding: 20px;
-    }
-  }
-
-  .block:hover .iconBox {
-    width: 80%;
-    transform: translateX(0px);
-  }
-
-  @media (max-width: 768px) {
-    .block {
-      margin-top: 20px;
-      width: 100%;
-    }
-  }
-  @media (max-width: 1000px) {
-    .block {
-      width: 100%;
-      padding: 0%;
-    }
-  }
-
-  /* Icon Box */
-}
-
-//Clinics-wrapper
-#Clinics-wrapper {
-  margin: 80px 0px;
-  .left-content {
-    text-align: center;
-    a {
-      font-size: 33px;
-      text-decoration: none;
-      font-weight: bold;
-      background-color: $CM;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 4px;
-      span {
-        color: $SC;
+    .progressbar {
+      counter-reset: step;
+      li {
+        list-style: none;
+        display: inline-block;
+        width: 30.33%;
+        position: relative;
+        text-align: center;
+        cursor: pointer;
+        font-size: 1rem;
+        font-weight: 500;
         font-style: italic;
+        &::before {
+          content: counter(step);
+          counter-increment: step;
+          width: 30px;
+          height: 30px;
+          line-height: 30px;
+          border: none;
+          border-radius: 100%;
+          display: block;
+          text-align: center;
+          margin: 0 auto 10px auto;
+          background-color: $CM;
+          color: white;
+        }
+        &::after {
+          content: "";
+          position: absolute;
+          width: 100%;
+          height: 2px;
+          background-color: $CM;
+          top: 15px;
+          left: -50%;
+          z-index: -1;
+        }
+      }
+      li:first-child:after {
+        content: none;
+      }
+      li.active {
+        color: $CM;
+      }
+      li.active:before {
+        border-color: $CM;
+      }
+      li.active + li:after {
+        background-color: $CM;
       }
     }
-    p {
-      font-size: 24px;
-      margin-top: 20px;
-    }
-  }
-
-  .carousel-control-next-icon,
-  .carousel-control-prev-icon {
-    background-color: $CB;
-    border-radius: 4px;
   }
 }
 
 //testimonals
 
 .testimonial-main {
+  margin: 80px 0;
   .testimonial {
     text-align: center;
     padding: 85px 50px 45px 70px;
@@ -523,6 +446,9 @@ margin-top: 72px; */
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
+.contact {
+  margin-top: 80px;
+}
 .contact .info {
   border-top: 3px solid #47b2e4;
   border-bottom: 3px solid #47b2e4;
@@ -758,12 +684,12 @@ footer {
         transition: transform 0.5s;
         &::after {
           content: "";
-          width: 100%;
-          height: 100%;
-          top: -90px;
-          left: 0;
+          width: 110%;
+          height: 110%;
+          top: -80px;
+          left: -0px;
           background: #000;
-          background: linear-gradient(-45deg, $SC, $CM);
+          background: linear-gradient(-45deg, $CM, #000);
           position: absolute;
           transition: 0.5s;
         }
@@ -828,6 +754,7 @@ footer {
   }
   h4 {
     text-transform: uppercase;
+    padding: 20px 0 0 0;
     color: $CM;
   }
   p {
@@ -866,7 +793,6 @@ footer {
               span {
                 color: $CM;
                 font-weight: 700;
-               
               }
             }
           }
@@ -888,7 +814,7 @@ footer {
       position: relative;
       font-weight: 400;
       font-size: 24px;
-      color:#000;
+      color: #000;
       &::before {
         content: "";
         position: absolute;
@@ -945,5 +871,20 @@ footer {
       font-style: italic;
       font-weight: 600;
     }
+  }
+}
+
+//champ-details
+.champDetails{
+  .champ-content{
+    margin: 70px 0;
+  }
+  h4 {
+    text-transform: uppercase;
+    padding: 20px 0 0 0;
+    color: $CM;
+  }
+  p {
+    text-align: start;
   }
 }
