--- a/scss/index.css
+++ b/scss/index.css
@@ -178,9 +178,11 @@ margin-top: 72px; */
 }
 
 .hero-main .hero-left h4 {
+  text-align: center;
   letter-spacing: 0.05em;
   color: #3587c8;
   font-weight: 600;
+  font-size: 24px;
   position: relative;
 }
 
