--- a/scss/index.scss
+++ b/scss/index.scss
@@ -171,9 +171,11 @@ margin-top: 72px; */
   .hero-left {
     padding: 20px 0 0 20px;
     h4 {
+      text-align: center;
       letter-spacing: 0.05em;
       color: $CM;
       font-weight: 600;
+      font-size: 24px;
       position: relative;
       &::before{
         content: '';
