final one for now

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -169,7 +169,7 @@ margin-top: 72px; */
   width: 100%;
   height: 100%;
   .hero-left {
-    padding: 20px 0 0 20px;
+    padding: 0 0 0 20px;
     h4 {
       text-align: center;
       letter-spacing: 0.05em;
