--- a/scss/index.css
+++ b/scss/index.css
@@ -174,7 +174,7 @@ margin-top: 72px; */
 }
 
 .hero-main .hero-left {
-  padding: 20px 0 0 20px;
+  padding: 0 0 0 20px;
 }
 
 .hero-main .hero-left h4 {
