--- a/scss/index.scss
+++ b/scss/index.scss
@@ -183,6 +183,12 @@ margin-top: 72px; */
 .hero-main {
   width: 100%;
   height: 100%;
+  .row{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+  }
   .hero-left {
     padding: 0 0 0 20px;
     h4 {
@@ -228,7 +234,7 @@ margin-top: 72px; */
               background-color: $CM;
               color: white;
               padding: 8px 15px;
-              border: 3px;
+              border-radius: 3px;
             }
           }
         }
@@ -236,12 +242,14 @@ margin-top: 72px; */
     }
   }
   .hero-right {
+    overflow: hidden;
     img {
       width: 100%;
-      height: 100%;
+      margin-top: -50px;
     }
     .progressbar {
       counter-reset: step;
+      @include MarPad();
       li {
         font-family: "Dosis", sans-serif;
         list-style: none;
@@ -292,6 +300,13 @@ margin-top: 72px; */
       }
     }
   }
+}
+
+//about-us
+.aboutUs{
+.aboutus-content{
+  margin: 80px 0;
+}
 }
 
 //testimonals
@@ -787,7 +802,7 @@ footer {
 
 //clinicsDetails
 .clinicsDetails {
-  padding: 40px 0 40px 0;
+  padding: 40px 0 ;
   .clinics-content {
     margin-top: 70px;
   }
