--- a/scss/index.css
+++ b/scss/index.css
@@ -83,6 +83,10 @@ body {
   color: #CFD2D5;
 }
 
+img {
+  border-radius: 3px;
+}
+
 /*--------------------------------------------------------------
 # Breadcrumbs
 --------------------------------------------------------------*/
@@ -103,6 +107,17 @@ margin-top: 72px; */
   font-size: 28px;
   font-weight: 600;
   color: white !important;
+}
+
+.breadcrumbs a {
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 15px;
 }
 
 @media (max-width: 992px) {
@@ -808,7 +823,7 @@ footer .social-wrap .social-links {
 
 footer .social-wrap .social-links a {
   width: 30px;
-  height: 30px;
+  height: 33px;
   text-align: center;
   text-decoration: none;
   color: #434343;
@@ -818,25 +833,13 @@ footer .social-wrap .social-links a {
   margin: 0 6px;
   border-radius: 50%;
   border: 1px solid #3587c8;
-  position: relative;
-  overflow: hidden;
-  -webkit-transition: -webkit-transform 0.5s;
-  transition: -webkit-transform 0.5s;
-  transition: transform 0.5s;
-  transition: transform 0.5s, -webkit-transform 0.5s;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
-footer .social-wrap .social-links a::after {
-  content: "";
-  width: 110%;
-  height: 110%;
-  top: -80px;
-  left: -0px;
-  background: #000;
-  background: linear-gradient(-45deg, #3587c8, #000);
-  position: absolute;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+footer .social-wrap .social-links a:hover {
+  background-color: #3587c8;
+  color: white;
 }
 
 footer .social-wrap .social-links a:hover::after {
@@ -868,7 +871,7 @@ footer p {
   font-weight: 300;
 }
 
-footer .quick-links h4 {
+footer h4 {
   font-family: "Dosis", sans-serif;
   color: #3587c8;
   font-weight: bold;
@@ -1028,14 +1031,8 @@ footer .quick-links ul li a {
   text-align: start !important;
 }
 
-.misson ul li a {
-  text-decoration: none;
-}
-
-.misson ul li a span {
-  color: #ffcd3f;
-  font-weight: 700;
-  border-bottom: 1px solid #3587c8;
+.misson ul li {
+  color: #888;
 }
 
 .misson .text-center {
@@ -1084,5 +1081,13 @@ footer .quick-links ul li a {
 
 .champDetails ul li {
   margin-top: 15px;
+}
+
+.team .team-content {
+  margin: 80px 0px;
+}
+
+.team .team-content .row {
+  margin: 40px 0;
 }
 /*# sourceMappingURL=index.css.map */
