--- a/scss/index.scss
+++ b/scss/index.scss
@@ -36,7 +36,7 @@ $SB: #fffafa;
 body {
   // font-family: "Roboto", sans-serif;
   // font-family: 'Open Sans', sans-serif;
-  font-family: 'Dosis', sans-serif;
+  font-family: "Dosis", sans-serif;
   // font-family: "Merriweather", serif;
   // font-family: "square721";
   line-height: 1.6;
@@ -67,7 +67,7 @@ body {
     padding-bottom: 20px;
     position: relative;
     color: $CM;
-    
+
     &::before {
       content: "";
       position: absolute;
@@ -92,13 +92,13 @@ body {
       font-style: italic;
       color: $SC;
     }
-    p{
-      color: #CFD2D5;
+    p {
+      color: #cfd2d5;
     }
   }
 }
 
-img{
+img {
   border-radius: 3px;
 }
 
@@ -122,7 +122,7 @@ margin-top: 72px; */
     font-weight: 600;
     color: white !important;
   }
-  a{
+  a {
     color: white;
     display: flex;
     justify-content: center;
@@ -306,8 +306,8 @@ margin-top: 72px; */
     }
   }
   @media (max-width: 768px) {
-    .hero-right{
-      img{
+    .hero-right {
+      img {
         width: 100%;
       }
     }
@@ -315,10 +315,10 @@ margin-top: 72px; */
 }
 
 //about-us
-.aboutUs{
-.aboutus-content{
-  margin: 80px 0;
-}
+.aboutUs {
+  .aboutus-content {
+    margin: 80px 0;
+  }
 }
 
 //testimonals
@@ -450,7 +450,7 @@ margin-top: 72px; */
   @media (max-width: 767px) {
     .why-content {
       margin-top: 20px;
-      .title-why{
+      .title-why {
         text-align: center;
       }
     }
@@ -468,10 +468,10 @@ margin-top: 72px; */
     border: 1px solid $BC;
     overflow: hidden;
     transition: all 0.3s ease-in-out;
-    &:hover{
+    &:hover {
       margin-top: -10px;
     }
-    .imagee{
+    .imagee {
       width: 100%;
       height: 200px;
       overflow: hidden;
@@ -480,7 +480,6 @@ margin-top: 72px; */
       width: 100%;
       object-fit: cover;
       transform: scale(1.6);
-     
     }
     .card-content {
       padding: 0 20px;
@@ -512,9 +511,9 @@ margin-top: 72px; */
 --------------------------------------------------------------*/
 .contact {
   margin-top: 80px;
-  .section-title{
-    p{
-      color: #9B757D;
+  .section-title {
+    p {
+      color: #9b757d;
     }
   }
 }
@@ -751,7 +750,7 @@ footer {
         border-radius: 50%;
         border: 1px solid $CM;
         transition: all 0.5s ease-in-out;
-        &:hover{
+        &:hover {
           background-color: $CM;
           color: white;
         }
@@ -797,7 +796,6 @@ footer {
     font-weight: bold;
   }
   .quick-links {
-   
     ul {
       @include MarPad();
       li {
@@ -826,9 +824,64 @@ footer {
 
 //clinicsDetails
 .clinicsDetails {
-  padding: 40px 0 ;
+  padding: 40px 0;
   .clinics-content {
     margin-top: 70px;
+    img{
+      height: auto;
+    }
+
+    .clinic-left {
+      h4 {
+        text-align: center;
+        letter-spacing: 0.05em;
+        color: $CM;
+        font-weight: bold;
+        text-transform: uppercase;
+        font-size: 24px;
+        position: relative;
+        &::before {
+          content: "";
+          position: absolute;
+          bottom: -14px;
+          left: 0%;
+          width: 100%;
+          height: 2px;
+          background-color: $CM;
+        }
+      }
+      .clinics-list {
+        margin: 20px;
+        ul {
+          @include MarPad();
+          list-style: none;
+          li {
+            font-size: 12px;
+            border-bottom: 1px solid $BC;
+            .left-list {
+              strong {
+                font-size: 1rem !important;
+                color: $CM;
+                font-weight: 600;
+              }
+              .date {
+                background-color: $SB;
+                padding: 5px 15px;
+              }
+            }
+            .right-list {
+              button {
+                border: none;
+                background-color: $CM;
+                color: white;
+                padding: 8px 15px;
+                border-radius: 3px;
+              }
+            }
+          }
+        }
+      }
+    }
   }
   h4 {
     font-family: "Dosis", sans-serif;
@@ -886,6 +939,58 @@ footer {
         color: $SC;
       }
     }
+    .miniAllies-left {
+      margin: 20px 20px;
+      h4 {
+        text-align: center;
+        letter-spacing: 0.05em;
+        color: $CM;
+        font-weight: bold;
+        text-transform: uppercase;
+        font-size: 24px;
+        position: relative;
+        &::before {
+          content: "";
+          position: absolute;
+          bottom: -14px;
+          left: 0%;
+          width: 100%;
+          height: 2px;
+          background-color: $CM;
+        }
+      }
+      .clinics-list {
+        margin: 20px;
+        ul {
+          @include MarPad();
+          list-style: none;
+          li {
+            font-size: 12px;
+            border-bottom: 1px solid $BC;
+            .left-list {
+              strong {
+                font-size: 1rem !important;
+                color: $CM;
+                font-weight: 600;
+              }
+              .date {
+                background-color: $SB;
+                padding: 5px 15px;
+              }
+            }
+            .right-list {
+              button {
+                border: none;
+                background-color: $CM;
+                color: white;
+                padding: 8px 15px;
+                border-radius: 3px;
+              }
+            }
+          }
+        }
+      }
+    }
   }
   .banner-inner {
     margin: 80px 0;
@@ -912,11 +1017,14 @@ footer {
     font-weight: 600;
     font-size: 1rem;
   }
-  span {
-    font-family: "Dosis", sans-serif;
-    color: $CM;
-    font-weight: 800;
-    font-style: italic;
+
+  .session {
+    span {
+      font-family: "Dosis", sans-serif;
+      color: $CM;
+      font-weight: 800;
+      font-style: italic;
+    }
   }
 }
 .misson {
@@ -928,15 +1036,14 @@ footer {
     list-style: none;
     text-align: start !important;
     li {
-          color: #888;
-        
-      }
+      color: #888;
+    }
   }
   .text-center {
     font-size: 18px;
   }
   h5 {
-     font-family: "Dosis", sans-serif;
+    font-family: "Dosis", sans-serif;
     font-size: 1.2rem;
     text-transform: uppercase;
     color: $CM;
@@ -961,28 +1068,146 @@ footer {
     text-transform: uppercase;
     padding: 20px 0 0 0;
     color: $CM;
+    font-weight: bold;
   }
   p {
     text-align: start;
   }
-  ul{
+  ul {
     @include MarPad();
     list-style: none;
-    li{
+    li {
       margin-top: 15px;
+    }
+  }
+
+  .hero-left {
+    padding: 0 0 0 20px;
+    h4 {
+      font-family: "Dosis", sans-serif;
+      text-align: center;
+      letter-spacing: 0.05em;
+      color: $CM;
+      font-weight: bold;
+      text-transform: uppercase;
+      font-size: 24px;
+      position: relative;
+      &::before {
+        content: "";
+        position: absolute;
+        bottom: -14px;
+        left: 0%;
+        width: 100%;
+        height: 2px;
+        background-color: $CM;
+      }
+    }
+    .clinics-list {
+      margin: 20px;
+      ul {
+        @include MarPad();
+        list-style: none;
+        li {
+          font-size: 12px;
+          border-bottom: 1px solid $BC;
+          .left-list {
+            strong {
+              font-size: 1rem !important;
+              color: $CM;
+              font-weight: 600;
+            }
+            .date {
+              background-color: $SB;
+              padding: 5px 15px;
+            }
+          }
+          .right-list {
+            button {
+              border: none;
+              background-color: $CM;
+              color: white;
+              padding: 8px 15px;
+              border-radius: 3px;
+            }
+          }
+        }
+      }
+    }
+  }
+  .hero-right {
+    img {
+      width: 90%;
+      margin-top: -80px;
+    }
+    .progressbar {
+      counter-reset: step;
+      @include MarPad();
+      li {
+        font-family: "Dosis", sans-serif;
+        list-style: none;
+        display: inline-block;
+        width: 30.33%;
+        position: relative;
+        text-align: center;
+        cursor: pointer;
+        font-size: 1rem;
+        font-weight: 500;
+        font-style: italic;
+        &::before {
+          content: counter(step);
+          counter-increment: step;
+          width: 30px;
+          height: 30px;
+          line-height: 30px;
+          border: none;
+          border-radius: 100%;
+          display: block;
+          text-align: center;
+          margin: 0 auto 10px auto;
+          background-color: $CM;
+          color: white;
+        }
+        &::after {
+          content: "";
+          position: absolute;
+          width: 100%;
+          height: 2px;
+          background-color: $CM;
+          top: 15px;
+          left: -50%;
+          z-index: -1;
+        }
+      }
+      li:first-child:after {
+        content: none;
+      }
+      li.active {
+        color: $CM;
+      }
+      li.active:before {
+        border-color: $CM;
+      }
+      li.active + li:after {
+        background-color: $CM;
+      }
+    }
+  }
+  @media (max-width: 768px) {
+    .hero-right {
+      img {
+        width: 100%;
+      }
     }
   }
 }
 
 // teams
-.team{
-  .team-content{
-  margin:80px 0px ;
-    
-  .row{
-    margin: 40px 0;
-  }
+.team {
+  .team-content {
+    margin: 80px 0px;
 
+    .row {
+      margin: 40px 0;
+    }
   }
 }
-
